# YAVE

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/core/: application.hpp  audio_player.hpp  color.hpp  debugger.hpp  exporter.hpp  file_explorer.hpp  importer.hpp  scene_editor.hpp  thumbnail_loader.hpp  timeline.hpp  video_player.hpp
include/core/backend/: audio_player.hpp  loader.hpp  media_concatenation.hpp  packet_queue.hpp  subtitle_player.hpp  thumbnail_loader.hpp  video_loader.hpp  video_player.hpp  waveform_loader.hpp
include/core/utils/: scoped_lock.hpp
src/: main.cpp
src/core/: application.cpp  audio_player.cpp  color.cpp  debugger.cpp  exporter.cpp  file_explorer.cpp  importer.cpp  scene_editor.cpp  thumbnail_loader.cpp  timeline.cpp  video_player.cpp
src/core/backend/: audio_player.cpp  media_concatenation.cpp  packet_queue.cpp  subtitle_player.cpp  thumbnail_loader.cpp  video_loader.cpp  video_player.cpp  waveform_loader.cpp
